Closed Bug 406106 Opened 17 years ago Closed 17 years ago

Large leak with XSLTProcessor.setParameter

Categories

(Core :: XSLT, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta2

People

(Reporter: jruderman, Assigned: peterv)

References

Details

(Keywords: memory-leak, testcase)

Attachments

(2 files)

Attached file testcase
Loading this testcase makes Firefox leak 4 nsGlobalWindows, 1 BackstagePass, and lots of other things. (As shown by trace-refcnt on Mac.)
Attached patch v1Splinter Review
Assignee: nobody → peterv
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite?
OS: Mac OS X → All
Priority: -- → P3
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
I think this bug is likely to have caused bug 407502.
This bug may well have caused bug 409343 too.
Depends on: 409208
Depends on: 407502
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: