Fix for bug 406106 (Large leak with XSLTProcessor.setParameter). r/sr/a=sicking.