content/xslt/src/xslt/txMozillaXSLTProcessor.h
@@ -48,6 +48,7 @@
 #include "txExpandedNameMap.h"
 #include "txNamespaceMap.h"
 #include "nsIJSNativeInitializer.h"
+#include "nsCycleCollectionParticipant.h"
 
 class nsIDOMNode;
 class nsIPrincipal;
@@ -88,7 +89,9 @@ public:
     ~txMozillaXSLTProcessor();
 
     // nsISupports interface
-    NS_DECL_ISUPPORTS
+    NS_DECL_CYCLE_COLLECTING_ISUPPORTS
+    NS_DECL_CYCLE_COLLECTION_CLASS_AMBIGUOUS(txMozillaXSLTProcessor,
+                                             nsIXSLTProcessor)
 
     // nsIXSLTProcessor interface
     NS_DECL_NSIXSLTPROCESSOR
